app/assets/stylesheets/home.css
@media only screen and (max-width: 600px) {
  #banner-headers h1 {
    font-size: 20px;
  }

  #banner-headers {
    margin: 50px;
  }

  #about h1 {
    font-size: 30px;
  }

  h3 {
    font-size: 20px;
  }

  .container {
    margin: 100px 50px;
  }

  #banner-headers h3 {
    font-size: 25px;
    color: black;
  }

  .footer {
    height: 50px;
  }
}

#banner-design {
  background-image: url("Banner.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: space-around;
  position: relative;
  align-items: center;
}

#banner-headers {
  width: 650px;
  font-family: 'Noto Sans SC', sans-serif;
}

#banner-headers h1 {
  font-size: 70px;
}

#banner-headers h3 {
  font-size: 25px;
  color: black;
}

.menu {
  position: absolute;
  top: 20px;
  left: 20px;
}

.hidden-menu {
  display: none;
}

label.hamburg {
  display: block;
  background: white; width: 75px; height: 50px;
  position: relative;
  margin-left: auto; margin-right: auto;
  border-radius: 4px;
}

input#hamburg {display:none}

.line {
  position: absolute;
  left:10px;
  height: 4px; width: 55px;
  background: black; border-radius: 2px;
  display: block;
  transition: 0.5s;
  transform-origin: center;
}

.line:nth-child(1) { top: 12px; }
.line:nth-child(2) { top: 24px; }
.line:nth-child(3) { top: 36px; }

#hamburg:checked + .hamburg .line:nth-child(1){
  transform: translateY(12px) rotate(-45deg);
}

#hamburg:checked + .hamburg .line:nth-child(2){
  opacity:0;
}

#hamburg:checked + .hamburg .line:nth-child(3){
  transform: translateY(-12px) rotate(45deg);
}

.hidden-menu li {
  margin: 5px 0;
  line-height: 2em;
  font-size: 20px;
  font-family: 'Noto Sans SC', sans-serif;
}

#hamburg:checked + .hamburg .hidden-menu{
  display: inline;
  list-style-type: none;
  position: absolute;
  top: 50px;
  left: 10px;
  background-color: white;
  border: 1px solid black;
  border-radius: 10px;
  padding: 10px 20px;
  min-width: 150px;
  margin-top: 15px;
}

.flags {
  font-size: 40px;
}

.hamburg {
  z-index: 10;
}

